Adjusted padding to avoid text overlap

--- a/cart.css
+++ b/cart.css
@@ -78,7 +78,7 @@
 }
 
 .descr-padding {
-    padding-right: 2em;
+    padding-right: 2.75em;
 }
 
 .btn-remove {
